# UTA-Rover-Society-base_station

./: .gitignore  README.md  ROS start guide  odroid_ssh.sh  rocket_account_info.txt  start_odroid.sh
Autonomy/: READ_ME.txt
Autonomy/Computer Vision/: CMakeCache.txt  Makefile  cmake_install.cmake
Autonomy/Computer Vision/src/: caffe_googlenet.cpp  color_detection.cpp  contrast_example.cpp  hist_eq_color.cpp  histogram_eq.cpp  image_rotation.cpp  inverting.cpp  shape_detection.cpp  shape_detection2.cpp  track_color.cpp  video_brightness.cpp
Computer Vision/: CMakeLists.txt  Makefile  READ_ME.txt
Computer Vision/src/: dilating.cpp  eroding.cpp  facedetect.cpp  mouse.cpp  trackbar.cpp  video_rotation.cpp  webcam_example.cpp
Notes/: arm format
Notes/Networking/: Laptop Network Config  ROS network config  ROS_network_setup.txt  example_bashrc.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesResponse.h  GetLinkStateResponse.h  GetModelPropertiesResponse.h  GetModelStateResponse.h  GetPhysicsPropertiesRequest.h  GetWorldPropertiesRequest.h  GetWorldPropertiesResponse.h  JointRequestResponse.h  ModelState.h  ODEJointProperties.h  ODEPhysics.h  SetJointPropertiesRequest.h  SetJointPropertiesResponse.h  SetJointTrajectoryRequest.h  SetLinkPropertiesRequest.h  SetModelConfigurationResponse.h  SetModelStateRequest.h  SetModelStateResponse.h  SetPhysicsPropertiesRequest.h  SpawnModelResponse.h
catkin_ws/devel/include/gazebo_plugins/: CameraSynchronizerConfig.h
catkin_ws/devel/share/controls/cmake/: controlsConfig.cmake
catkin_ws/devel/share/gazebo_msgs/cmake/: gazebo_msgs-msg-extras.cmake  (+1 more)
catkin_ws/install/: setup.sh
catkin_ws/src/controls/: CMakeLists.txt  README
catkin_ws/src/controls/launch/: start_controls.launch
catkin_ws/src/controls/src/: controller.cpp
catkin_ws/src/random_gps_publisher/: CMakeLists.txt
catkin_ws/src/random_gps_publisher/src/: gps_publisher.cpp
catkin_ws/src/rosToArduino/scripts/: rosToArduino.py
catkin_ws/src/rqt_example_cpp/: plugin.xml
catkin_ws/src/rqt_position_plugin/: CMakeLists.txt  package.xml  plugin.xml
catkin_ws/src/rqt_position_plugin/include/rqt_position_plugin/: tracker.h
catkin_ws/src/rqt_position_plugin/scripts/: rqt_position_plugin
catkin_ws/src/rqt_position_plugin/src/rqt_position_plugin/: position_plugin.ui
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/random_gps_publisher/cmake/: random_gps_publisherConfig.cmake
devel/share/rqt_position_plugin/cmake/: rqt_position_pluginConfig.cmake
roverROS/BC/build-src-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
roverROS/BC/build-src-Desktop-Default/beginner_tutorials/: CTestTestfile.cmake  Makefile  beginner_tutorials.cbp  cmake_install.cmake
roverROS/BC/build-src-Desktop-Default/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
roverROS/BC/build-src-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
roverROS/BC/build-src-Desktop-Default/display/: CTestTestfile.cmake  Makefile  cmake_install.cmake  display.cbp
roverROS/BC/build-src-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
roverROS/BC/build-src-Desktop-Default/myahrs_driver/: CTestTestfile.cmake  Makefile  cmake_install.cmake  myahrs_driver.cbp
roverROS/BC/build-src-Desktop-Default/rTemp/: CTestTestfile.cmake  Makefile  cmake_install.cmake  rTemp.cbp
roverROS/BC/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
roverROS/BC/src/: CMakeLists.txt
roverROS/BC/src/UI-Test1/: UI-Test1.pro
roverROS/BC/src/beginner_tutorials/: package.xml
roverROS/BC/src/build-UI-Test1-Desktop-Debug/: Makefile  UI-Test1
roverROS/BC/src/display/: CMakeLists.txt  package.xml
roverROS/BC/src/rTemp/: CMakeLists.txt
roverROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
roverROS/devel/include/gazebo_msgs/: ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  ContactsState.h  GetJointPropertiesRequest.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetModelPropertiesRequest.h  GetModelStateRequest.h  GetPhysicsPropertiesResponse.h  JointRequestRequest.h  LinkState.h  LinkStates.h  ModelStates.h  SetJointTrajectoryResponse.h  SetLinkPropertiesResponse.h  SetLinkStateRequest.h  SetLinkStateResponse.h  SetModelConfigurationRequest.h  SetPhysicsPropertiesResponse.h  SpawnModelRequest.h  WorldState.h
roverROS/install/: .rosinstall  _setup_util.py
roverROS/src/: Start ROS
roverROS/src/arduinoToRos/: CMakeLists.txt  package.xml
roverROS/src/arduino_status/: CMakeLists.txt  package.xml
roverROS/src/arduino_status/scripts/: arduino_status.py
roverROS/src/controls/launch/: start_controls.launch  start_odroid.launch
roverROS/src/controls/src/: controller  controller.cpp
roverROS/src/myahrs_driver/launch/: myahrs_driver.launch
roverROS/src/myahrs_driver/src/: myahrs_driver.cpp
roverROS/src/osrf-gazebo-585d74d2c94f/: .hg_archival.txt
roverROS/src/random_gps_publisher/: package.xml
roverROS/src/rosToArduino/scripts/: rosToArduino.py
roverROS/src/rover_autonomy/: CMakeLists.txt  package.xml
roverROS/src/rover_autonomy/src/: main.cpp
roverROS/src/rqt_example_cpp/: CMakeLists.txt  package.xml
roverROS/src/serial_communication/: CMakeLists.txt  package.xml
roverROS/src/serial_communication/scripts/: serial_communication.py
src/random_gps_publisher/src/: gps_publisher.cpp
src/rqt_position_plugin/: setup.py
src/rqt_position_plugin/include/rqt_position_plugin/: position_plugin.h
src/rqt_position_plugin/src/rqt_position_plugin/: 1  position_plugin.cpp  position_plugin.ui  tracker.cpp
start_scripts/base_station/: start_base_station.sh
start_scripts/odroid/: start_roscore_and_roscoms.sh
(+102 files in other folders)
